# flex-moe-toolkit

./: .gitignore  README.md  pyproject.toml  routing_logs.jsonl  test_mkqa_analysis_shapes.py  test_mkqa_domain_specialization.py  test_mkqa_vocab_specialization.py
.matplotlib/: fontlist-v390.json
eval/: __init__.py
eval/benchmarks/: __init__.py
eval_data/: test_load_hf_dataset.py
eval_data/mkqa/: analyze_mkqa_domain_specialization.py  analyze_mkqa_vocab_specialization.py  mkqa_analysis_config.combined_native.a2.example.json  mkqa_analysis_config.combined_native.a4.example.json  mkqa_analysis_config.combined_native.a7.example.json  mkqa_analysis_config.combined_native.example.json  mkqa_analysis_config.combined_native.smoke.example.json  mkqa_analysis_config.example.json  mkqa_analysis_config.public_expert.example.json  mkqa_analysis_config.public_expert.smoke.example.json  mkqa_analysis_config.smoke.example.json  mkqa_pipeline.py  plot_mkqa_collapse_diagnostics.py  plot_mkqa_paper_style_combined.py  plot_mkqa_results.py  run_mkqa_analysis_suite.py  run_mkqa_combined_a2_full_suite.sh  run_mkqa_combined_a4_full_suite.sh  run_mkqa_combined_a7_full_suite.sh  run_mkqa_combined_full_suite.sh  run_mkqa_combined_smoke_suite.sh  (+5 more)
examples/: routing_demo_1.py  routing_demo_2.py
fake_test_models/: fake_flex_olmo.py  fake_lora_expert.py
flex_moe_toolkit/: analysis.py  capture.py  plots.py  routing.py
flex_moe_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_paths/: all_models.txt  eval_pipeline.py  models.json  requirements.txt
(+346 files in other folders)
